--- a/packages/ppbgdi/data_stream/python_logs/manifest.yml
+++ b/packages/ppbgdi/data_stream/python_logs/manifest.yml
@@ -2,12 +2,12 @@ title: "Python logs"
 type: logs
 streams:
   - input: logfile
-    title: Sample logs
-    description: Collect sample logs
+    title: Python json logs
+    description: Collect Python json logs
     vars:
       - name: paths
         type: text
         title: Paths
         multi: true
         default:
-          - /var/log/*.log
+          - /var/log/*-json.log
