--- a/packages/ppbgdi/manifest.yml
+++ b/packages/ppbgdi/manifest.yml
@@ -24,13 +24,13 @@ icons:
     size: 32x32
     type: image/svg+xml
 policy_templates:
-  - name: sample
-    title: Sample logs
-    description: Collect sample logs
+  - name: ppbgdi
+    title: PPBGDI logs and metrics
+    description: Collect logs and metrics from PPBGDI apps
     inputs:
       - type: logfile
-        title: Collect sample logs from instances
-        description: Collecting sample logs
+        title: Collect PPBGDI logs
+        description: Collecting logs from PPBGDI instances
 owner:
   github: geoadmin/infra-elastic-integrations
   type: community
