--- a/packages/ppbgdi/data_stream/python_logs/manifest.yml
+++ b/packages/ppbgdi/data_stream/python_logs/manifest.yml
@@ -1,5 +1,6 @@
 title: "Python logs"
 type: logs
+dataset: ppbgdi.python_logs
 streams:
   - input: logfile
     title: Python json logs
@@ -11,3 +12,7 @@ streams:
         multi: true
         default:
           - /var/log/*-json.log
+# Ensures integrations works with reroute processors and have permissions to write data to `logs-*-*`
+elasticsearch:
+  dynamic_dataset: true
+  dynamic_namespace: true
