--- a/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-wmts-json.log-config.yml
+++ b/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-wmts-json.log-config.yml
@@ -1,6 +1,9 @@
 fields:
   tags:
     - preserve_original_event
+  data_stream:
+    dataset: ppbgdi.python_logs
+    namespace: dev
   kubernetes:
     namespace_labels:
       system: wmts
@@ -8,3 +11,4 @@ fields:
       env: dev
 dynamic_fields:
   'event.ingested': "^.*$"
+  'data_stream.dataset': "^.*$"
