--- a/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/entity-layer.yml
+++ b/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/entity-layer.yml
@@ -1,5 +1,5 @@
 ---
-description: Pipeline for processing sample logs
+description: Pipeline for layer transforms
 processors:
   - rename:
       field: temp.ppbgdi.app.layer
