--- a/packages/ppbgdi/data_stream/service_wmts_logs/fields/common-fields.yml
+++ b/packages/ppbgdi/data_stream/service_wmts_logs/fields/common-fields.yml
@@ -1,32 +1,15 @@
 - name: ppbgdi.app
   type: group
   fields:
-    - name: layer
+    - name: api
       type: group
-      description: BGDI layer information
       fields:
-        - name: id
+        - name: version
           type: keyword
-          description: The id / name of the layer
-        - name: extension
-          type: keyword
-          description: The file extention
-        - name: column
-          type: long
-          description: The easting orientation of a tile
-        - name: row
-          type: long
-          description: The northing orientation of the tile
-        - name: zoom
-          type: long
-          description: The zoom level of the tile
-        - name: time
-          type: keyword
-          description: The publication time of the resource
     - name: system
       type: keyword
       description: The BGDI system
-    - name: crs
+    - name: epsg
       type: long
       description: The projection type of the layer
 - name: http.request.headers.*
