BGDIINF_SB-3114: Added wms logs

--- a/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
+++ b/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
@@ -2,7 +2,7 @@
 # based on service-name.
 - source_dataset: ppbgdi.python_logs
   rules:
-    - target_dataset: ppbgdi.service_wmts
+    - target_dataset: ppbgdi.service_wmts_logs
       if: ctx?.service?.name != null && ctx?.service?.name == 'service-wmts'
       namespace:
         - "{{data_stream.namespace}}"
