--- a/packages/ppbgdi/data_stream/service_wmts_logs/fields/entity-layer.yml
+++ b/packages/ppbgdi/data_stream/service_wmts_logs/fields/entity-layer.yml
@@ -5,12 +5,14 @@
       type: group
       description: BGDI layer information
       fields:
+        # Common layer fields
         - name: id
           type: keyword
           description: The id / name of the layer
         - name: extension
           type: keyword
           description: The file extention
+        # WMTS layer specific fields
         - name: column
           type: long
           description: The easting orientation of a tile
