--- a/packages/ppbgdi/data_stream/service_wms_logs/fields/common-fields.yml
+++ b/packages/ppbgdi/data_stream/service_wms_logs/fields/common-fields.yml
@@ -11,7 +11,10 @@
       description: The BGDI system
     - name: epsg
       type: long
-      description: The projection type of the layer
+      description: The projection type of the app
+    - name: language
+      type: keyword
+      description: The language of the app
 - name: kubernetes.namespace_labels.*
   type: keyword
   description: Used to set the ppbgdi.app.system field
