--- a/packages/ppbgdi/data_stream/service_wms_logs/fields/entity-layer.yml
+++ b/packages/ppbgdi/data_stream/service_wms_logs/fields/entity-layer.yml
@@ -28,6 +28,9 @@
         - name: styles
           type: keyword
           description: The styles of the requested map (scalar or array)
+        - name: transparent
+          type: boolean
+          description: If the layer is transparent or not
         - name: width
           type: long
           description: the width of the requested map
