Refactored wms elastic-package-test pipeline

--- a/packages/ppbgdi/data_stream/service_wms_logs/_dev/test/pipeline/test-service-wms-layer.log-config.yml
+++ b/packages/ppbgdi/data_stream/service_wms_logs/_dev/test/pipeline/test-service-wms-layer.log-config.yml
@@ -1,6 +1,7 @@
 fields:
   tags:
     - preserve_original_event
+    - elastic-package-test # Tag to parse elastic-package test logs
   kubernetes:
     namespace_labels:
       system: wms
