--- a/packages/ppbgdi/data_stream/service_wms_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/service_wms_logs/elasticsearch/ingest_pipeline/default.yml
@@ -9,7 +9,7 @@ processors:
       value: '{{_ingest.timestamp}}'
   - pipeline:
       description: Pipeline used to create fields for elastic-package tests
-      if: ctx?.url == null
+      if: ctx?.tags != null && ctx?.tags.contains('elastic-package-test')
       name: '{{ IngestPipeline "elastic-package-test" }}'
   - pipeline:
       description: Parse query parameters
