--- a/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
+++ b/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
@@ -7,3 +7,8 @@
       namespace:
         - "{{data_stream.namespace}}"
         - default
+    - target_dataset: ppbgdi.service_stac_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-stac'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
