--- a/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/default.yml
@@ -39,7 +39,7 @@ processors:
   - set:
       field: event.outcome
       value: failure
-      if: "ctx?.event?.severity >= 40"
+      if: "ctx?.event?.severity != null && ctx?.event?.severity >= 40"
   - set:
       field: event.outcome
       value: failure
