Finished service-stac parsing

--- a/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/common-json.yml
+++ b/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/common-json.yml
@@ -101,6 +101,13 @@ processors:
       field: temp.url.path
       target_field: url.path
       ignore_missing: true
+  - rename:
+      field: temp.url.query
+      target_field: url.query
+      ignore_missing: true
+  - urldecode:
+      field: url.query
+      ignore_missing: true
   - set:
       description: Override event.id with request.id if existing
       field: event.id
