--- a/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/elastic-package-test.yml
+++ b/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/elastic-package-test.yml
@@ -9,6 +9,9 @@ processors:
       add_to_root: true
   - remove:
       field: temp_message
+  - urldecode:
+      field: url.query
+      ignore_missing: true
   - script:
       lang: painless
       description: This script removes the 'elastic-package-test' tag for cleaner expected log
