--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "0.1.0"
+  changes:
+    - description: Added service-stac logs
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/7
 - version: "0.0.1"
   changes:
     - description: Initial version of the package
