--- a/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
+++ b/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
@@ -12,3 +12,8 @@
       namespace:
         - "{{data_stream.namespace}}"
         - default
+    - target_dataset: ppbgdi.mf_chsdi3_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'mf-chsdi3'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
