--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "0.2.0"
+  changes:
+    - description: Added mf-chsdi3 logs
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/8
 - version: "0.1.0"
   changes:
     - description: Added service-stac logs
