Added mf-chsdi3 url query parser

--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/default.yml
@@ -23,3 +23,7 @@ processors:
   - remove:
       field:
         - first_char
+  - pipeline:
+      description: Process url query
+      if: ctx?.url?.query != null && ctx?.url?.query != ""
+      name: '{{ IngestPipeline "url-query" }}'
