--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/fields/common-fields.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/fields/common-fields.yml
@@ -1,3 +1,14 @@
+- name: ppbgdi.app
+  type: group
+  fields:
+    - name: system
+      type: keyword
+      description: The BGDI system
+    - name: query_params.*
+      type: object
+      object_type: keyword
+      description: |
+        The canonical query-parameters of the monitored http request.
 - name: http.request.headers.*
   type: keyword
   description: Not yet but already in use ecs fields
