PB-428: Fixed service-stac parsing

--- a/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -11,6 +11,8 @@ processors:
       pattern_definitions:
         STAC_VERSION: "v(?<ppbgdi.app.api.version>[0-9]([.][0-9])*)"
         STAC_ADMIN_ENDPOINT: "(?<ppbgdi.app.stac.endpoint>admin)"
+        STAC_CHECKER_ENDPOINT: "(?<ppbgdi.app.stac.endpoint>checker)"
+        STAC_METRICS_ENDPOINT: "(?<ppbgdi.app.stac.endpoint>metrics)"
         STAC_COLLECTIONS_ENDPOINT: "(?<ppbgdi.app.stac.endpoint>collections)"
         STAC_CONFORMANCE_ENDPOINT: "(?<ppbgdi.app.stac.endpoint>conformance)"
         STAC_SEARCH_ENDPOINT: "(?<ppbgdi.app.stac.endpoint>search)"
@@ -21,6 +23,8 @@ processors:
         STAC_UPLOAD_OPTION: "/(?<ppbgdi.app.stac.upload.option>abort|complete|parts)"
 
       patterns:
+        - '^/%{STAC_CHECKER_ENDPOINT}$'
+        - '^/%{STAC_METRICS_ENDPOINT}$'
         - '^/api/stac/%{STAC_VERSION}/?$'
         - '^/api/stac/%{STAC_VERSION}/%{STAC_CONFORMANCE_ENDPOINT}/?$'
         - '^/api/stac/%{STAC_VERSION}/%{STAC_COLLECTIONS_ENDPOINT}(%{STAC_COLLECTION}(/items%{STAC_FEATURE}?(/assets%{STAC_ASSET}?(/uploads%{STAC_UPLOAD_ID}?(%{STAC_UPLOAD_OPTION})?)?)?)?)?$'
