PB-428: Fixed stac pipeline description

--- a/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/default.yml
@@ -1,5 +1,5 @@
 ---
-description: Default pipeline for processing wms logs
+description: Default pipeline for processing stac logs
 processors:
   - set:
       field: ecs.version
